Title update and some minor UI changes

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">VOTEPLAY</a>
+          <a class="navbar-brand" href="#">ICC Lightning Talks</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <div class="navbar-form navbar-right">
@@ -50,7 +50,7 @@
     <div class="jumbotron">
       <div class="container">
         <h3>Welcome!</h3>
-        <p>Vote here!</p>
+        <p>Add a lightning talk</p>
         <p>
             <button type="button" class="btn btn-primary btn-info btn-lg" onclick="popupAddVote()">Create</button>
         </p>
@@ -69,7 +69,7 @@
       <hr>
 
       <footer>
-        <p>bdh92123 - 2017</p>
+        <p>ICC Lightning Talks - 2017 - Sujan Thapa</p>
       </footer>
     </div> <!-- /container -->
 
@@ -85,8 +85,8 @@
                 <div class="modal-body">
                     <form id="frmVoteAdd">
                         <div class="form-group">
-                            <label for="voteTitle">2???</label>
-                            <input type="text" class="form-control" name="voteTitle" id="voteTitle" aria-describedby="titleHelp" placeholder="투표 제목">
+                            <label for="voteTitle">Talk title</label>
+                            <input type="text" class="form-control" name="voteTitle" id="voteTitle" aria-describedby="titleHelp" placeholder="Title">
                             <small id="titleHelp" class="form-text text-muted">3?</small>
                         </div>
                         <div class="form-group">
