--- a/index.html
+++ b/index.html
@@ -91,12 +91,12 @@
                       </div>
                       <div class="form-group">
                           <label for="desc">Description</label>
-                          <textarea class="form-control" id="desc" name="Description" aria-describedby="descHelp" placeholder="Wow, such lightning, much talk "></textarea>
+                          <textarea class="form-control" id="desc" name="desc" aria-describedby="descHelp" placeholder="Wow, such lightning, much talk "></textarea>
                           <!-- <small id="descHelp" class="form-text text-muted">Description</small> -->
                       </div>
                       <div class="form-group">
                           <label>Author</label>
-                          <input type="text" class="form-control" name="Author" aria-describedby="authorHelp" placeholder="Doge">
+                          <input type="text" class="form-control" name="author" aria-describedby="authorHelp" placeholder="Doge">
                           <!-- <small id="authorHelp" class="form-text text-muted">Author</small> -->
                       </div>
                   </form>
