Talks from database

--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
 
       <br />
 
-      <button id="more-btn" type="button" class="btn btn-default" onclick="nextPage()" >More</button>
+      <div id="talks-container"></div>
+
+      <!-- <button id="more-btn" type="button" class="btn btn-default" onclick="nextPage()" >More</button> -->
 
       <hr>
 
