vote and unvote with auth and proper count

--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
         <p>
             <button type="button" class="btn btn-primary btn-info btn-lg" onclick="popupAddVote()">Create</button>
         </p>
+        <p id = "votedFor">
+        </p>
       </div>
     </div>
 
