--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
     </nav>
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron">
-      <div class="container">
+    <div class="jumbotron vertical-center">
+      <div class="container text-center">
         <h3>Welcome!</h3>
         <div id="add-talk" class="hidden">
           <p>Add a lightning talk</p>
