voting closed after deadline and voting time displayed

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">ICC Lightning Talks</a>
+          <a class="navbar-brand" href="#">ICC Friday Night Hacks</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <div class="navbar-form navbar-left">
@@ -53,6 +53,7 @@
     <div class="jumbotron vertical-center">
       <div class="container text-center">
         <h3>Welcome!</h3>
+        <h4 id="voting-time"></h4>
         <div id="add-talk" class="hidden">
           <p>Add a lightning talk</p>
             <p>
@@ -78,7 +79,7 @@
       <hr>
 
       <footer>
-        <p>ICC Lightning Talks - 2017 - Sujan Thapa</p>
+        <p>ICC Lightning Talks - 2017 - <a href="http://www.thapasujan.com">Sujan Thapa</a></p>
       </footer>
     </div> <!-- /container -->
 
