email address of logged in user

--- a/index.html
+++ b/index.html
@@ -41,10 +41,11 @@
           <div class="navbar-form navbar-left">
             <button id="result-btn" type="button" onclick="result();" class="btn btn-success">Result</button>
           </div>
-            <div class="navbar-form navbar-right">
-                <button id="login-btn" type="button" onclick="login();" class="btn btn-success" style="display: none;">Login</button>
-                <button id="logout-btn" type="button" onclick="logout();" class="btn btn-fail" style="display: none;">Logout</button>
-            </div>
+          <div class="navbar-form navbar-right">
+              <button id="login-btn" type="button" onclick="login();" class="btn btn-success" style="display: none;">Login</button>
+              <button id="logout-btn" type="button" onclick="logout();" class="btn btn-fail" style="display: none;">Logout</button>
+          </div>
+          <p id="signedin" class="navbar-text navbar-right"></p>
         </div><!--/.navbar-collapse -->
       </div>
     </nav>
