--- a/index.html
+++ b/index.html
@@ -150,5 +150,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap3-dialog/1.34.7/js/bootstrap-dialog.min.js"></script>
     <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/util.js"></script>
     </body>
 </html>
