prize added in result modal

--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
                   </form>
                 </div>
                 <div class="modal-footer">
+                    <span id="result-footer" class="form-control-static pull-left"></span>
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                 </div>
             </div>
